Implement view model, bind view model with view, and tidy up all the codebase.

--- a/ConvolutionImageProcessing.csproj
+++ b/ConvolutionImageProcessing.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\" />
+    <Folder Include="Views\" />
   </ItemGroup>
 
   <ItemGroup>
